tests/snapshots/run_wpt_conformance__litert_tile_float16_2D_tensor.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "tile.https.any.js",
    "tile float16 2D tensor",
    "litert",
    "PASS",
)
