tests/snapshots/run_wpt_conformance__litert_tile_float32_1D_constant_tensor.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
tile.https.any.js tile float32 1D constant tensor, litert
 tile :: tile float32 1D constant tensor: index 0: actual=0.00000000000000000000000000000012343932 expected=1 ulp=861914176 tolerance=4
  inputs: tileInput: [1, 2, 3, 4] (constant)
  expected tileOutput: [1, 2, 3, 4, 1, 2, 3, 4]
  actual tileOutput: [0.00000000000000000000000000000012343932, 0.000000000000000000000000000000000000000040582, -0.0000000000000000000000000000000000403724, 0.000000000000000000000000000000000000000032661, 0.00000000020862735, 77155164000000000000000000000000, 55596420000000000000000000000000, 19367385000000000000000000000000]
  expected tileOutput full nd:
(shape [8])
[1, 2, 3, 4, 1, 2, 3, 4]
  actual tileOutput full nd:
(shape [8])
[0.00000000000000000000000000000012343932, 0.000000000000000000000000000000000000000040582, -0.0000000000000000000000000000000000403724, 0.000000000000000000000000000000000000000032661, 0.00000000020862735, 77155164000000000000000000000000, 55596420000000000000000000000000, 19367385000000000000000000000000]

--- built graph ---
webnn_graph "graph" v2 {
  consts {
    operand_0: f32[4] @bytes([0, 0, 128, 63, 0, 0, 0, 64, 0, 0, 64, 64, 0, 0, 128, 64]);
  }

  nodes {
    [tileOutput] = tile(operand_0, label="");
  }

  outputs { tileOutput; }
}
