tests/snapshots/run_wpt_conformance__litert_transpose_float32_0D_constant_tensor_default_options.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
transpose.https.any.js transpose float32 0D constant tensor default options, litert
 Failed to convert graph: graph conversion failed for litert: unsupported operation: Transpose { input: 0, options: Some(MLTransposeOptions { label: "", permutation: [] }), outputs: [1] }

--- built graph ---
webnn_graph "graph" v2 {
  consts {
    operand_0: f32[] @bytes([158, 178, 54, 194]);
  }

  nodes {
    [transposeOutput] = transpose(operand_0, label="", permutation=[]);
  }

  outputs { transposeOutput; }
}
